# my_nixos

./: .claudeignore  .cursorrules  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  BACKUP_DEPLOYMENT_STATUS.md  CLAUDE.md  LICENSE  README.md  README.org  autoSystemUpdate.sh  autoUpgrade.sh  autoUserUpdate.sh  cleanIPTABLESrules.sh  debug-keyd-nixos.sh  debug-portal.sh  debug-qt-env.sh  deploy-lxc.sh  deploy-servers-private.conf  deploy-servers.conf  deploy.sh  firewall-start  flake.AGA.nix  flake.AGADESK.nix  flake.DESK.nix  flake.DESK_AGA.nix  flake.DESK_HYPR.nix  flake.DESK_OLD.nix  flake.DESK_VMDESK.nix  flake.HOME.nix  flake.LAPTOP.nix  flake.LAPTOP_AGA.nix  flake.LAPTOP_HYPR.nix  flake.LAPTOP_L15.nix  flake.LAPTOP_YOGAAKU.nix  flake.LXC.nix  flake.LXC_HOME.nix  flake.LXC_database.nix  (+53 more)
.agent/rules/: dotfiles-protocols.md
.claude/agents/: README.md  darwin-context.md  deployment-context.md  docs-context.md  gaming-context.md  infrastructure-registry.md  nixos-context.md  plane-context.md  sway-context.md
.claude/backup/: debug-qt5ct.nix
.claude/commands/: audit-infrastructure.md  audit-project-docs.md  audit-project-security.md  check-database.md  check-kuma.md  check-redis.md  clean-gaming.md  darwin-rebuild.md  deploy-db-secrets.md  deploy-finance-tagger.md  deploy-liftcraft-test.md  deploy-lxc.md  docker-startup-nas.md  docker-startup-truenas.md  docs-health.md  gather-db-credentials.md  install-app.md  list-apps.md  manage-matrix.md  manage-nas.md  manage-pfsense.md  manage-proxmox.md  manage-tailscale.md  manage-truenas.md  merge-branches.md  remove-app.md  (+13 more)
.cursor/: blueman-fix-summary.md  debug-keyd-nixos.sh  debug-keyd.sh  debug-sway-startup.sh  debug-theme-diagnostics.sh  debug-waybar-config.sh  debug-waybar-css.sh  debug-waybar-double-bar-report.md  debug_alacritty.sh  final-waybar-css-check.sh  keyd-debug-plan.md  monitor-keypress.sh  swayfx-testing-guide.md  test-capslock.sh  test-keycodes.sh  test-sway-startup.sh  test-swayfx-features.sh  theme-diagnostics-analysis.md  verify-keyd.sh  verify-waybar-fix.sh  waybar-css-verification.md
.my_old_dotfiles/: TODO.md  configuration.nix
apps/control-panel/: .gitignore  Cargo.toml  README.md  config.example.toml
apps/control-panel/core/: Cargo.toml
apps/control-panel/core/src/: config.rs  error.rs  lib.rs  ssh.rs
apps/control-panel/core/src/docker/: commands.rs  mod.rs
apps/control-panel/core/src/editor/: duplicate.rs  mod.rs  parser.rs  writer.rs
apps/control-panel/core/src/infra/: deploy.rs  git.rs  graph.rs  mod.rs  monitoring.rs
apps/control-panel/docs/: SWAY_PANEL_REFERENCE.md
apps/control-panel/native/: Cargo.toml
apps/control-panel/native/src/: app.rs  main.rs  theme.rs
apps/control-panel/native/src/ui/: docker.rs  editor.rs  infra.rs  mod.rs  monitoring.rs  proxmox.rs  sway.rs
apps/control-panel/src/: auth.rs  config.rs  error.rs  main.rs  ssh.rs
apps/control-panel/src/docker/: commands.rs  mod.rs  routes.rs
apps/control-panel/src/editor/: mod.rs  parser.rs  routes.rs
apps/control-panel/src/infra/: deploy.rs  git.rs  graph.rs  mod.rs  monitoring.rs  proxmox.rs  routes.rs
apps/control-panel/static/css/: style.css
apps/control-panel/tauri-app/: Cargo.toml  tauri.conf.json
apps/control-panel/tauri-app/src/: main.rs
apps/control-panel/web/: Cargo.toml
apps/control-panel/web/src/: lib.rs  main.rs
apps/control-panel/web/src/routes/: auth.rs  docker.rs  editor.rs  infra.rs  mod.rs  monitoring.rs  proxmox.rs
docs/: 00_INDEX.md  00_ROUTER.md  01_CATALOG.md  agent-context.md  configuration.md  daily-usage.md  getting-started.md  hardware.md  installation.md  keybindings.md  lxc-deployment.md  macos-installation.md  macos-komi-migration.md  maintenance.md  multi-user-workflow.md  navigation.md  nix-quote-escaping.md  patches.md  profile-feature-flags.md  profiles.md  proxmox-lxc.md  scripts.md  security.md  system-modules.md  themes.md  user-modules.md
lib/: defaults.nix  flake-base.nix  flake-unified.nix
patches/: README.md  pcloudfixes.nix  vivaldifixes.nix
profiles/: AGA-config.nix  AGADESK-config.nix  DESK-config.nix  DESK-flatpaks.json  DESK_A-config.nix  DESK_AGA-config.nix  DESK_VMDESK-config.nix  DESKold-config.nix  HOME-config.nix  KOMI_LXC-base-config.nix  KOMI_LXC_database-config.nix  KOMI_LXC_mailer-config.nix  KOMI_LXC_monitoring-config.nix  KOMI_LXC_proxy-config.nix  KOMI_LXC_tailscale-config.nix  LAPTOP-base.nix  LAPTOP-config.nix  LAPTOP_A-config.nix  LAPTOP_AGA-config.nix  LAPTOP_L15-config.nix  LAPTOP_X13-config.nix  LAPTOP_YOGA-config.nix  LAPTOP_YOGAAKU-config.nix  LXC-base-config.nix  LXC_HOME-config.nix  LXC_database-config.nix  LXC_liftcraftTEST-config.nix  LXC_mailer-config.nix  LXC_matrix-config.nix  LXC_monitoring-config.nix  LXC_plane-config.nix  LXC_portfolioprod-config.nix  LXC_proxy-config.nix  LXC_template-config.nix  LXCplane-config.nix  LXCtemplate-config.nix  MACBOOK-KOMI-config.nix  MACBOOK-base.nix  NAS_PROD-config.nix  README.md  (+7 more)
scripts/: backup-manager.sh  calibre-batch-convert.sh  configure_terminals.py  fetch-lutris-art.py  flatpak-reconcile.sh  generate-calendar-token.sh  generate_docs_index.py  gmail-harden-alfred.py  jellyfin-library-migration.sh  migrate-bottles-to-lutris.py  migrate-bottles.sh  migrate-kuma.py  nas-docker-startup.sh  nas-wol.sh  pfsense-backup.sh  pin-lutris-prefix.sh  redirect-game-saves.sh  setup-hooks.sh  sync-claude-settings.sh  test-notification.sh  truenas-docker-startup.sh  truenas-docker-suspend-hook.sh  truenas-unlock-pools.sh  truenas-vpn-watchdog.sh  truenas-wol.sh  truenas-zfs-replicate.sh  update-claude-code.sh  vps-wireguard-optimize.sh
secrets/: control-panel.nix  control-panel.nix.template  domains.nix  domains.nix.template  restic-password-databases.txt  restic-password-nextcloud.txt  restic-password-services.txt  restic-password-truenas-configs.txt  restic-password-truenas-data.txt  restic-password-workstation.txt  truenas-api-key.txt  truenas-encryption-passphrase.txt
system/: README.md  README.org  hardware-configuration.nix
themes/: README.md
user/: README.md
(+792 files in other folders)
