# NixOS Infrastructure Control Panel - Workspace
#
# This is a Cargo workspace with three crates:
# - core: Shared library with SSH, config, docker, proxmox, infra, editor logic
# - web: Axum web server (primary UI)
# - tauri-app: Tauri desktop wrapper around the web server

[workspace]
members = ["core", "web", "tauri-app"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["akunito"]
description = "NixOS Infrastructure Control Panel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# SSH
russh = "0.48"
russh-keys = "0.48"
ssh-key = "0.6"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Nix parsing (Phase 3)
rnix = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Encoding
base64 = "0.22"
