[package]
name = "control-panel-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Desktop wrapper for NixOS Infrastructure Control Panel"

[[bin]]
name = "control-panel-desktop"
path = "src/main.rs"

[dependencies]
control-panel-core = { path = "../core" }
control-panel-web = { path = "../web" }

# Tauri
tauri = { version = "2", features = ["devtools"] }

# Async runtime
tokio = { workspace = true }

# Config & serialization
serde = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Web framework (for embedded server)
axum = "0.8"

[build-dependencies]
tauri-build = "2"
